--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,13 @@ body {
     background-color: #edf2f7;
 }
 
+.cover {
+  background-image: url('./images/cover/cover1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: inset 0 0 0 100vmax rgba(24, 49, 28, 0.4); 
+}
+
 .result-message {
     line-height: 22px;
     font-size: 16px;
